<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="142dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="181dp"
        android:fontFamily="serif"
        android:text="@string/header1"
        android:textColor="#F10A0A"
        android:textSize="40sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="150dp"
        android:text="@string/header2"
        android:textColor="#090909"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="55dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/name1"
        android:inputType="textPersonName"
        android:textColor="#101010"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/userphoneno"
        android:layout_width="303dp"
        android:layout_height="46dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="55dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phoneno1"
        android:inputType="phone"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:autofillHints="" />

    <Button
        android:id="@+id/next1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="68dp"
        android:text="@string/next1"
        android:textSize="30sp"
        app:cornerRadius="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userphoneno" />

</androidx.constraintlayout.widget.ConstraintLayout>